--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Just Java</string>
+    <string name="toppings">toppings</string>
+    <string name="whipped_cream_checkbox">Whipped cream</string>
 </resources>
